--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #207cd3;
+    background-color: #17a31e;
     font-family: "Oswald", sans-serif;
 }
 
@@ -18,7 +18,7 @@ a {
 }
 
 a:hover {
-    color: rgb(93, 220, 255);
+    color: rgb(179, 255, 93);
 }
 
 menu,
@@ -31,7 +31,7 @@ li {
 .navbar__list {
     display: flex;
     justify-content: space-between;
-    background-color: rgb(0, 158, 179);
+    background-color: rgb(44, 206, 106);
     padding: 15px 15px;
     border-radius: 5px;
 }
@@ -52,7 +52,7 @@ li {
     align-items: center;
     margin: 0 auto;
     margin-top: 50px;
-    background-color: rgb(0, 158, 179);
+    background-color: rgb(80, 180, 85);
     padding: 30px 30px;
     border-radius: 5px;
 }
@@ -69,7 +69,7 @@ li {
     align-items: center;
     margin: 0 auto;
     margin-top: 50px;
-    background-color: rgb(0, 158, 179);
+    background-color: rgb(80, 180, 85);
     padding: 30px 30px;
     border-radius: 5px;
 }
