--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,11 @@ a {
     transition: all .7s ease;
 }
 
-.title{
-    font-size: 36px;
+.title{    font-size: 25px;
 }
 
 .text{
-    font-size: 30px;
+    font-size: 25px;
 }
 
 a:hover {
@@ -33,14 +32,15 @@ li {
     justify-content: space-between;
     background-color: rgb(44, 206, 106);
     padding: 15px 15px;
-    border-radius: 5px;
 }
 
 .navbar__listLink {
-    font-size: 24px;
+    font-size: 20px;
 }
 
-
+.tegs__container {
+    background-color: rgb(26, 148, 53);
+}
 .tegs__wrapper {
     color: aliceblue;
     text-align: center;
@@ -54,9 +54,12 @@ li {
     margin-top: 50px;
     background-color: rgb(80, 180, 85);
     padding: 30px 30px;
-    border-radius: 5px;
 }
 
+
+.architecture {
+    background-color: rgb(26, 148, 53);
+}
 
 .architecture__wrapper {
     color: aliceblue;
@@ -71,7 +74,6 @@ li {
     margin-top: 50px;
     background-color: rgb(80, 180, 85);
     padding: 30px 30px;
-    border-radius: 5px;
 }
 
 .footer__title{
