--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,8 @@ a {
     transition: all .7s ease;
 }
 
-.title{    font-size: 25px;
+.title{
+    font-size: 25px;
 }
 
 .text{
@@ -32,6 +33,8 @@ li {
     justify-content: space-between;
     background-color: rgb(44, 206, 106);
     padding: 15px 15px;
+    margin-bottom: 15px;
+    border: solid 2px rgb(28, 133, 68);
 }
 
 .navbar__listLink {
@@ -40,6 +43,8 @@ li {
 
 .tegs__container {
     background-color: rgb(26, 148, 53);
+    border: solid 2px rgb(21, 110, 40);
+    padding-bottom: 50px;
 }
 .tegs__wrapper {
     color: aliceblue;
@@ -53,12 +58,57 @@ li {
     margin: 0 auto;
     margin-top: 50px;
     background-color: rgb(80, 180, 85);
-    padding: 30px 30px;
+    padding: 30px 250px;
+    border: solid 2px rgb(61, 136, 64);
+}
+
+.functions__container {
+    background-color: rgb(26, 148, 53);
+    border: solid 2px rgb(21, 110, 40);
+    padding-bottom: 50px;
+}
+.functions__wrapper {
+    color: aliceblue;
+    text-align: center;
+    width: 100%;
+    max-width: 750px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    margin-top: 50px;
+    background-color: rgb(80, 180, 85);
+    padding: 30px 250px;
+    border: solid 2px rgb(61, 136, 64);
+}
+
+.repositories__container {
+    background-color: rgb(26, 148, 53);
+    border: solid 2px rgb(21, 110, 40);
+    padding-bottom: 50px;
+}
+.repositories__wrapper {
+    color: aliceblue;
+    text-align: center;
+    width: 100%;
+    max-width: 750px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    margin-top: 50px;
+    background-color: rgb(80, 180, 85);
+    padding: 30px 250px;
+    border: solid 2px rgb(61, 136, 64);
 }
 
 
 .architecture {
     background-color: rgb(26, 148, 53);
+    border: solid 2px rgb(21, 110, 40);
+    padding-bottom: 50px;
 }
 
 .architecture__wrapper {
@@ -73,7 +123,8 @@ li {
     margin: 0 auto;
     margin-top: 50px;
     background-color: rgb(80, 180, 85);
-    padding: 30px 30px;
+    padding: 30px 250px;
+    border: solid 2px rgb(61, 136, 64);
 }
 
 .footer__title{
