--- a/css/style.css
+++ b/css/style.css
@@ -73,23 +73,25 @@ li {
 }
 .functions__wrapper {
     color: aliceblue;
-    text-align: center;
-    width: 100%;
-    max-width: 750px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    text-align: left;
+    max-width: 1590px;
     margin: 0 auto;
     margin-top: 50px;
+    margin-left: 15px;
+    display: flex;
+    justify-content: space-between;
     background-color: rgb(80, 180, 85);
     padding: 30px 250px;
     border: solid 2px rgb(61, 136, 64);
     border-radius: 25px;
+    padding-left: 10px;
+}
+.functions__text {
+    margin-right: 15px;
 }
 
 .repositories__container {
-    background-color: rgb(26, 148, 53);
+    background-color: rgb(55, 122, 69);
     border: solid 2px rgb(21, 110, 40);
     padding-bottom: 50px;
     border-radius: 25px;
@@ -106,7 +108,7 @@ li {
     margin: 0 auto;
     margin-top: 50px;
     background-color: rgb(80, 180, 85);
-    padding: 30px 250px;
+    padding: 30px 150px;
     border: solid 2px rgb(61, 136, 64);
     border-radius: 25px;
 }
@@ -134,6 +136,12 @@ li {
     border: solid 2px rgb(46, 95, 57);
     padding-bottom: 50px;
     border-radius: 25px;
+}
+
+.architecture__picture {
+    width: 150px;
+    margin-left: 875px;
+    margin-top: 50px;
 }
 
 .architecture__wrapper {
