Создал файл (Index.html)

--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,55 @@ li {
     border-radius: 25px;
 }
 
+.creators__container {
+    background-color: rgb(26, 148, 53);
+    border: solid 2px rgb(21, 110, 40);
+    padding-bottom: 50px;
+    border-radius: 25px;
+}
+
+.creators__picture {
+    width: 550px;
+    margin-left: 700px;
+    margin-top: 25px;
+}
+
+.creators__wrapper {
+    color: aliceblue;
+    text-align: center;
+    width: 100%;
+    max-width: 750px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    margin-top: 50px;
+    padding-right: 1500px;
+    background-color: rgb(80, 180, 85);
+    padding: 30px 100px;
+    border: solid 2px rgb(61, 136, 64);
+    border-radius: 25px;
+}
+
+.analogs__container {
+    background-color: rgb(26, 54, 148);
+    border: solid 2px rgb(34, 21, 110);
+    padding-bottom: 50px;
+    border-radius: 25px;
+}
+.analogs__wrapper {
+    color: aliceblue;
+    text-align: center;
+    width: 100%;
+
+    flex-direction: column;
+    margin: 0 auto;
+    margin-top: 50px;
+
+    border-radius: 25px;
+}
+
 .creation__container {
     background-color: rgb(148, 119, 26);
     border: solid 2px rgb(110, 89, 21);
@@ -73,7 +122,7 @@ li {
 }
 .creation__wrapper {
     color: aliceblue;
-    max-width: 1000px;
+    max-width: 1300px;
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
@@ -86,6 +135,13 @@ li {
 .creation__title {
     width: 1350px;
     margin-left: 350px;
+    margin-top: 150PX;
+}
+.creation__picture {
+    width: 250px;
+    height: 250px;
+    margin-top: 30px;
+    margin-left: 25px;
 }
 
 .functions__container {
@@ -115,6 +171,7 @@ li {
 .functions__title {
     width: 1350px;
     margin-left: 150px;
+    margin-top: 70px;
 }
 
 .repositories__container {
@@ -157,6 +214,11 @@ li {
     border-radius: 25px;
 }
 
+.repositories__picture {
+    width: 250px;
+    padding-top: 35px;
+    margin-left: 825px;
+}
 
 .architecture {
     background-color: rgb(59, 129, 74);
