--- a/css/style.css
+++ b/css/style.css
@@ -271,3 +271,15 @@ li {
         font-size: 16px;
     }
 }
+
+@media screen and (max-width:724px) {
+    .navbar__listLink{
+        font-size: 16px;
+    }
+    .title{
+        font-size: 24px;
+    }
+    .text{
+        font-size: 16px;
+    }
+}
